feat: add OnSIDES to the new NSIDES update
