# ebel/manager/rdbms/models/nsides.py
@@ -1,4 +1,4 @@
-"""OFFSIDES RDBMS model definition."""
+"""NSIDES RDBMS model definition."""
 
 from sqlalchemy import Column, Integer, String, Float
 from sqlalchemy.ext.declarative import declarative_base
@@ -8,16 +8,25 @@ from ebel.manager.rdbms.models import object_as_dict
 Base = declarative_base()
 
 
-class Offsides(Base):
-    """Class definition for the offsides table."""
+class Nsides(Base):
+    """Class definition for the nSIDES table."""
 
-    __tablename__ = 'offsides'
+    __tablename__ = 'nsides'
     id = Column(Integer, primary_key=True)
 
     drug_rxnorn_id = Column(String(20), index=True)  # This has to be a String because of mapping to drugbank ids
     drug_concept_name = Column(String(255), index=True)
+
+    source = Column(String(10), index=True)
+
     condition_meddra_id = Column(Integer)
     condition_concept_name = Column(String(255), index=True)
+
+    # OnSIDES specific
+    vocabulary_id = Column(String(10))
+    domain_id = Column(String(10))
+
+    # OFFSIDES specific
     a = Column(Integer)
     b = Column(Integer)
     c = Column(Integer)
